--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 @media screen and (max-width: 400px) {
-  #features {
+  #coming-soon {
     padding: 20px;
     width: 111%;
+    color: rgb(206, 205, 205);
+    ;
   }
-  #about,
-  #services,
-  #testimonials,
+ 
   #team,
   #contact,
   #footer {
     width: 111%;
   }
 
-  #portfolio {
+  #roadmap {
     width: 110%;
   }
 }
