--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,12 +3,17 @@ html {
   font-family: "Open Sans", sans-serif;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
-  color: #777;
+  color: #d1cdcd;
   font-weight: 400;
   width: 100% !important;
   height: 100% !important;
 }
-h2,
+h2
+{
+  font-family: "Raleway", sans-serif;
+
+}
+,
 h3,
 h4 {
   font-family: "Raleway", sans-serif;
@@ -160,6 +165,8 @@ hr {
 .section-title p {
   font-size: 18px;
 }
+
+
 .btn-custom {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
@@ -241,7 +248,7 @@ a:focus,
 header .intro-text {
   padding-top: 350px;
   padding-bottom: 200px;
-  text-align: center;
+  text-align: left;
 }
 
 /* Roadmaps Section */
@@ -256,6 +263,13 @@ width: 100%;
 height: 100%;
 }
 
+.worker-image {
+  width: 100%;
+}
+
+.roadmap-text {
+  color: black;
+}
 /* Team Section */
 #team h4 {
   margin: 5px 0;
@@ -264,20 +278,36 @@ height: 100%;
 #team h2 {
   color: #055223;
 }
-#team .container {
+.main-container {
   background-color: #b2b9b2; 
   background-image: linear-gradient(to right, #0d0e20 0%, #353144 100%);
-  width: 100%;
 }
-#team .team-img {
-  width: 240px;
-}
-#team .thumbnail {
+
+.avatar-container {
   background: transparent;
-  border: 0;
 }
+
+.avatar-container .thumbnail {
+  border: 0;
+  padding: 0
+  background-color: #2f4353;
+  background-image: linear-gradient(315deg, #2f4353 0%, #d2ccc4 74%);
+}
+
+.avatar-row {
+  background: transparent;
+}
+
+.box-shadow {
+  box-shadow: 12px 1px 1px 1px rgb(47, 67, 83)
+}
+
+#team .team-img {
+  width: 220px;
+} 
+
 #team .thumbnail .caption {
-  padding: 5px 0 0;
+  padding: 1px 0 0;
   color: rgb(167, 167, 167);
 }
 
